# OpenADMET-ExpansionRx-Blind-Challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MERGE_PLAN.md  MODEL_CARD.md  README.md  SUBMISSIONS.md  TODO.md  calculate_weights.py  generate_ensemble_configs.py  pyproject.toml  scrape_gradio.py  select_diverse_configs.py  test_integration.py
.claude/ensemble_bug/: QUICK_START.md  REGRESSION_BUG_FIX_PLAN.md  analyze_commit_diff.sh  ensemble_diff.patch  investigate_ensemble_bug.py
.copilot-tracking/: implementation-plan-mlflow-bar-plot-metrics.md
.copilot-tracking/changes/: 20251216-sampler-harmonization-changes.md  20251222-multi-model-api-refactoring-changes.md  20251226-config-harmonization-changes.md
.copilot-tracking/details/: 20251216-sampler-harmonization-details.md  20251222-multi-model-api-refactoring-details.md  20251223-config-harmonization-details.md  20251226-chemeleon-ffn-integration-details.md  20251226-config-harmonization-details.md
.copilot-tracking/plans/: 20251216-productionize-gradio-scraper.md  20251216-sampler-harmonization-plan.instructions.md  20251222-multi-model-api-refactoring-plan.instructions.md  20251223-config-harmonization-plan.instructions.md  20251226-chemeleon-ffn-integration-plan.instructions.md  20251226-config-harmonization-plan.instructions.md
.copilot-tracking/prompts/: implement-chemeleon-ffn-integration.prompt.md  implement-config-harmonization.prompt.md  implement-multi-model-api-refactoring.prompt.md  implement-sampler-harmonization.prompt.md
.copilot-tracking/research/: 20241216-mlflow-bar-plot-metrics-research.md  20251216-gradio-leaderboard-scraper-research.md  20251216-sampler-harmonization-research.md  20251222-multi-model-api-refactoring-research.md  20251223-config-harmonization-research.md  20251226-chemeleon-ffn-integration-plan.md  20251226-config-harmonization-update-research.md  config-harmonization-plan.md
.github/: copilot-instructions.md
.github/agents/: debug.agent.md  gpt-5-beast-mode.agent.md  task-planner.agent.md  task-researcher.agent.md
.github/chatmodes/: debug.chatmode.md  gpt-5-beast-mode.chatmode.md  implementation-plan.chatmode.md
.github/instructions/: markdown.instructions.md  python.instructions.md
.github/plans/: model_training.md
.github/prompts/: prompt-builder.prompt.md
None/0/: meta.yaml
archive/: scrape_gradio_20251216.py
config/: base.yaml  chemprop.yaml  final_train.yaml  lightgbm.yaml  xgboost.yaml
configs/: chemprop.yaml  chemprop_curriculum.yaml  chemprop_tag.yaml  chemprop_task_affinity.yaml  chemprop_task_affinity_advanced.yaml  chemprop_task_affinity_explore.yaml  ensemble_chemprop.yaml  ensemble_chemprop_1.yaml  ensemble_chemprop_2.yaml  ensemble_chemprop_3.yaml  ensemble_chemprop_hpo_001.yaml  ensemble_chemprop_hpo_008.yaml  ensemble_chemprop_hpo_010.yaml  ensemble_chemprop_hpo_012.yaml  ensemble_chemprop_hpo_013.yaml  ensemble_chemprop_hpo_015.yaml  ensemble_chemprop_hpo_016.yaml  ensemble_chemprop_hpo_017.yaml  ensemble_chemprop_hpo_018.yaml  ensemble_chemprop_hpo_023.yaml  ensemble_chemprop_hpo_024.yaml  ensemble_chemprop_hpo_025.yaml  ensemble_chemprop_hpo_027.yaml  ensemble_chemprop_hpo_032.yaml  ensemble_chemprop_hpo_034.yaml  ensemble_chemprop_hpo_039.yaml  ensemble_chemprop_hpo_045.yaml  ensemble_chemprop_hpo_047.yaml  ensemble_chemprop_hpo_051.yaml  ensemble_chemprop_hpo_053.yaml  ensemble_chemprop_hpo_054.yaml  ensemble_chemprop_hpo_056.yaml  ensemble_chemprop_hpo_057.yaml  ensemble_chemprop_hpo_062.yaml  ensemble_chemprop_hpo_063.yaml  ensemble_chemprop_hpo_064.yaml  ensemble_chemprop_hpo_065.yaml  ensemble_chemprop_hpo_066.yaml  ensemble_chemprop_hpo_067.yaml  ensemble_chemprop_hpo_068.yaml  (+28 more)
configs/0-experiment/: chemeleon.yaml  chemprop.yaml  ensemble_chemprop_production.yaml  ensemble_joint_sampling_example.yaml
configs/1-hpo-single/: hpo_chemeleon.yaml  hpo_chemprop.yaml
configs/2-hpo-ensemble/: ensemble_chemprop_hpo_001.yaml  ensemble_chemprop_hpo_002.yaml  ensemble_chemprop_hpo_003.yaml  ensemble_chemprop_hpo_004.yaml  ensemble_chemprop_hpo_005.yaml  ensemble_chemprop_hpo_006.yaml  ensemble_chemprop_hpo_007.yaml  ensemble_chemprop_hpo_008.yaml  ensemble_chemprop_hpo_009.yaml  ensemble_chemprop_hpo_010.yaml  ensemble_chemprop_hpo_011.yaml  ensemble_chemprop_hpo_012.yaml  (+88 more)
data/: cleaned_combined_admet_test_v4.csv
docs/: Makefile  conf.py  index.rst
experiments/: run_high_quality_xgb_ensembles.sh  run_xgb_ensembles.sh
notebooks/: 0_exploratory_data_analysis.ipynb  1_dataset_splits.py  1_datset_splits.ipynb  exploratory_data_analysis.ipynb  openadmet_expansion_exploration.py
scripts/: README.md  README_mlflow_postgres.md  migrate_configs_to_new_api.py  mlflow_server.sh  predict_blinded.py  rebuild-docs-precommit.sh  run_data_splits.sh  run_final_train.py  run_mlflow_ui.sh  run_tune_chemprop.py  run_tune_lightgbm.py  run_tune_xgboost.py  setup_mlflow_postgres.sh  split_data.py  train_chemprop_ensembles.sh  train_chemprop_hpo.sh  train_chemprop_hpo_ensembles.sh  train_chemprop_model.sh  train_xgb.py
tests/: conftest.py  test_chemeleon_model.py  test_chemprop_adapter.py  test_chemprop_config.py  test_chemprop_e2e.py  test_chemprop_ffn.py  test_chemprop_model.py  test_chemprop_model_utils.py  test_classical_models.py  test_cli_data.py  test_cli_leaderboard.py  test_cli_logging.py  test_cli_model.py  test_curriculum.py  test_curriculum_callback.py  test_curriculum_extended.py  test_curriculum_fixes.py  test_curriculum_sampler.py  test_curriculum_sampler_extended.py  test_curriculum_state.py  test_dataset_loader.py  test_determinism.py  test_download.py  test_ensemble_blind_predictions.py  test_ensemble_chemprop.py  test_ensemble_discovery.py  test_ensemble_generic.py  test_ensemble_molecule_name.py  test_ffn_factory.py  test_fingerprints.py  test_hpo.py  test_hpo_config.py  test_hpo_search_space.py  test_hpo_search_space_generic.py  test_hpo_trainable.py  test_integration.py  test_inter_task_affinity.py  test_joint_sampler.py  test_leaderboard_client.py  test_leaderboard_parser.py  (+18 more)
(+410 files in other folders)
