[project]
name = "openadmet-challenge"
version = "0.0.1"
description = "Tools and experiments for the OpenADMET challenge"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # data science
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    # cheminformatics & chem ML
    "chemprop>=2",
    "rdkit",
    "useful_rdkit_utils",
    # machine learning
    "scikit-learn>=1.1",
    "xgboost>=1.7",
    # deep learning
    "torch>=2.1",
    "torchvision>=0.10",
    "torchaudio>=0.10",
    "torchmetrics>=0.11",
    # ML infra
    "mlflow>=2.0",
    "ray[tune]>=2.4",
    "transformers>=4.30",
    # visualization
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "colorcet>=3.0",
    # datasets & data download
    "polaris-lib",
    "datasets",
    "PyTDC",
    # CLI, testing, typing
    "typer>=0.7",
    "rich",
    "pytest>=7.0",
    # util
    "tqdm>=4.64",
    "requests>=2.28",
    # jupyter
    "jupyter",
    "ipympl",
    "ipywidgets",
    "ipykernel",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "mypy", "pytest-cov"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.scripts]
# Provide a convenient `admet` CLI entrypoint. Points to the package __main__.py main().
admet = "admet.cli.__main__:main"

[tool.black]
line-length = 109
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 109
src_paths = ["src"]

[tool.flake8]
max-line-length = 109
extend-ignore = "E203, W503"
exclude = ".git,__pycache__,.venv,env,build,dist"
