[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openadmet-challenge"
authors = [{ name = "Alec Glisman" }]
dynamic = ["version"]
description = "Tools and experiments for the OpenADMET challenge"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
keywords = [
    "ADMET",
    "cheminformatics",
    "machine learning",
    "deep learning",
    "drug discovery",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    # data science
    "numpy>=1.23,<2",
    "pandas>=1.5",
    "scipy>=1.9",
    # cheminformatics
    "chemprop>=2",
    "rdkit",
    "useful_rdkit_utils",
    # machine learning
    "statsmodels==0.14.5",
    "scikit-learn>=1.1",
    "iterative-stratification==0.1.9",
    "umap-learn==0.5.9.post2",
    "hdbscan==0.8.40",
    "lightgbm==4.6.0",
    "xgboost>=1.7",
    # deep learning
    "torch>=2.1",
    "torchvision>=0.10",
    "torchaudio>=0.10",
    "torchmetrics>=0.11",
    "ray[data,train,tune,serve]",
    # ML infra
    "mlflow>=2.0",
    "ray[tune]>=2.4",
    "nvidia-ml-py==13.580.82",
    "psutil",
    "transformers>=4.30",
    # visualization
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "colorcet>=3.0",
    "scienceplots==2.1.1",
    # datasets & data download
    "polaris-lib",
    "datasets",
    "PyTDC",
    # CLI, testing, typing
    "typer>=0.7",
    "rich",
    "pytest>=7.0",
    # util
    "tqdm>=4.64",
    "requests>=2.28",
    "omegaconf==2.3.0",
    "joblib",
    # jupyter
    "jupyter",
    "ipympl",
    "ipywidgets",
    "ipykernel",
    # marimo
    "marimo",
    "altair",
]


[project.optional-dependencies]
dev = [
    "pip",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pre-commit",
    "nbstripout",
    "beautysh",
    "shfmt-py",
    "pylint",
    "commitizen",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "furo",
    "sphinxext-opengraph",
    "sphinx-tabs",
    "sphinx-panels",
    "myst-parser",
]

[project.scripts]
# Provide a convenient `admet` CLI entrypoint. Points to the package __main__.py main().
admet = "admet.cli.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "admet.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
src_paths = ["src"]
skip_glob = ["src/bitbirch/**"]

[tool.flake8]
max-line-length = 120
extend-ignore = ['E203', 'W503', 'BLE001']
exclude = [
    '.git',
    '__pycache__',
    '.venv',
    'env',
    'build',
    'dist',
    'src/bitbirch',
    'notebooks',
]

[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = '''
/(
  src/bitbirch
)/
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict = false
exclude = ["tests/.*", "src/bitbirch"]

[tool.mypy-rdkit]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pylint.main]
max-locals = 15
max-attributes = 10
min-similarity-lines = 5
ignore-imports = true
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "x",
    "y",
    "df",
    "ax",
    "X",
    "y",
    "n",
    "m",
]
ignore-paths = ["src/bitbirch", "src/admet/train/_ray_test_stubs.py"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "fixme",
    "suppressed-message",
    "invalid-name",
    "useless-suppression",
    "too-few-public-methods",
    "import-outside-toplevel",
    "broad-exception-caught",
    "unnecessary-pass",
]

[tool.pylint.reports]
output-format = "colorized"
score = true
evaluation = "9.0"
fail-under = 9.0

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/admet"]
omit = ["*/tests/*", "*/test_*.py", "src/bitbirch/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if sys.version_info",
]
precision = 2
